We are going to have to WRITE to xlsx too.

--- a/Group1_Project2.Rmd
+++ b/Group1_Project2.Rmd
@@ -11,10 +11,14 @@ subtitle: Project 2
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = F)
-library(readxl)
+library(openxlsx)
 library(dplyr)
 library(caret)
 ```
+
+
+
+
 
 # Data Intake
 
