Forgive me for now.

--- a/Group1_Project2.Rmd
+++ b/Group1_Project2.Rmd
@@ -12,8 +12,8 @@ subtitle: Project 2
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = F)
 library(openxlsx)
-library(dplyr)
 library(caret)
+library(data.table)
 ```
 
 
